--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
+    "canvas": "^1.4.0",
     "co": "^4.6.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^1.1.1",
     "cookie": "^0.3.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "^2.4.2",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.8",
     "jade": "~1.11.0",
+    "librsvg": "^0.7.0",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.2",
     "mongoose-auto-increment": "^5.0.1",
