added sitemap support

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "debug": "~2.2.0",
     "ejs": "^2.4.2",
     "express": "~4.13.1",
+    "express-robots": "^0.1.6",
     "express-session": "^1.13.0",
+    "express-sitemap": "^1.7.0",
     "express-validator": "^2.20.8",
     "jade": "~1.11.0",
     "librsvg": "^0.7.0",
