--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ build/Release
 node_modules
 jspm_packages
 
+# Generated files
+public/sitemap.xml
+public/robots.txt
+
 # Optional npm cache directory
 .npm
 
