--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.13.0",
     "express-sitemap": "^1.7.0",
     "express-validator": "^2.20.8",
+    "gulp-riot": "^1.0.5",
     "jade": "~1.11.0",
     "librsvg": "^0.7.0",
     "method-override": "^2.3.6",
