--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-local-mongoose": "^4.0.0",
     "passport-strategy": "^1.0.0",
     "serve-favicon": "~2.3.0",
+    "stripe": "^4.15.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
