--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^4.5.2",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
+    "nodemailer": "^3.1.5",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
